
## 0.04-3 (2011-10-22)
  - added support for definint doPrintout() JS functions to rk.JS.doc(), rk.plugin.skeleton() and
    rk.plugin.component()
  - added function rk.comment() to add comments to the generated code. it's a <!-- comment --> node
    by default, but will be turned into // comment by rk.paste.JS() and <![CDATA[ comment ]]> for
    logic sections automatically
  - fixed missing "id.name" option in rk.XML.embed()

## 0.04-2 (2011-10-21)
  - removed the superfluous "name" option from rk.plugin.skeleton() and rk.plugin.component(); names are now
    always provided by "about", either as an <about> node or just the name.
  - result headers now start at level 1 by default in rk.JS.doc()
  - added option "suggest.required" to rk.plugin.skeleton() to add package requirements as suggestions,
    not dependencies
  - updated skeleton GUI dialog

## 0.04-1 (2011-10-20)
  - added "about" option to rk.XML.plugin() to overrule pluginmap defaults
  - added rk.plugin.component(), i.e. modularized the component generation, to allow for more than one
    component in rk.plugin.skeleton(), which subsequently gained the new option "components"
  - improved dependency support, rk.plugin.skeleton() writes dependencies from <about> to DESCRIPTION now
  - fixed dependency definition in rk.XML.about()
  - fixed "verion" typo in rk.XML.about()
  - the dot "." is now also allowed in file names

## 0.04-0 (2011-10-19)
  - for accurcy and consistency with the docs, the "properties" option changed to "modifiers" in rk.JS.vars()
  - added further property modifiers to the internal validation
  - added class rk.JS.var, including show method
  - added support for class rk.JS.var in rk.paste.JS() an id()
  - rk.JS.vars() now returns a list of class rk.JS.var
  - added support for all valid modifiers to rk.XML.convert() and rk.XML.connect()

## 0.03-7 (2011-10-18)
  - added "checkable" and "checked" options to rk.XML.frame()
  - set rk.paste.JS() default level to 2