@@ -15,7 +15,7 @@ URL: http://rkward.sourceforge.net
 Authors@R: c(person(given="Meik", family="Michalke",
     email="meik.michalke@hhu.de", role=c("aut", "cre")))
 Version: 0.04-3
-Date: 2011-10-22
+Date: 2011-10-23
 Collate:
     'echo.R'
     'id.R'
