@@ -14,6 +14,8 @@
 #'		pasted as-is, after \code{results.header} has been evaluated. Ignored if \code{doPrintout} is set.
 #' @param doPrintout A character string to be included in the \code{doPrintout()} function. This string will be
 #'		pasted as-is. You don't need to define a \code{preview()} function, as this will be added automatically. Use \code{ite("full", ...)} style JavaScript code to include headers etc.
+#' @param gen.info Logical, if \code{TRUE} a comment note will be written into the document,
+#'		that it was generated by \code{rkwarddev} and changes should be done to the script.
 #' @param indent.by A character string defining how indentation should be done.
 #' @return A character string.
 #' @seealso \code{\link[rkwarddev:rk.paste.JS]{rk.paste.JS}},
@@ -26,35 +28,44 @@
 #' @export
 
 rk.JS.doc <- function(require=c(), variables=NULL, results.header=NULL,
-	preprocess=NULL, calculate=NULL, printout=NULL, doPrintout=NULL, indent.by="\t"){
+	preprocess=NULL, calculate=NULL, printout=NULL, doPrintout=NULL, gen.info=TRUE, indent.by="\t"){
+
+	js.gen.info <- ifelse(isTRUE(gen.info), rk.paste.JS(generator.info, level=1), "")
 
 	js.require <- unlist(sapply(require, function(this.req){
-			paste(indent(2, by=indent.by), "echo(\"require(", this.req, ")\\n\");\n", sep="")
+			rk.paste.JS(echo(id("require(", this.req, ")\n")), level=2, indent.by=indent.by)
 		}))
 	js.preprocess <- paste("function preprocess(){\n",
 		indent(2, by=indent.by), "// add requirements etc. here\n",
 		paste(js.require, collapse=""),
-		ifelse(is.null(preprocess), "", paste(preprocess, "\n", sep="")),
+		"\n",
+		ifelse(is.null(preprocess), "", paste("\n", preprocess, "\n", sep="")),
 		"}", sep="")
 
 	js.calculate <- paste("function calculate(){\n",
-			indent(2, by=indent.by), "// read in variables from dialog\n",
-			ifelse(is.null(variables), "\n", paste(paste(variables, collapse=""), "\n", sep="")),
-			indent(2, by=indent.by), "// put the R code to be evaluated here\n",
-			ifelse(is.null(calculate), "", paste(calculate, "\n", sep="")),
+			ifelse(is.null(variables), "", paste(
+				indent(2, by=indent.by), "// read in variables from dialog\n", 
+				paste(variables, collapse=""), "\n\n", sep="")),
+			ifelse(is.null(calculate),
+				paste(indent(2, by=indent.by), "// put the R code to be evaluated here\n", sep=""),
+				paste(calculate, "\n", sep="")),
 			"}", sep="")
 		
 	js.printout <- paste("function printout(){\n",
-				if(is.null(doPrintout)){paste(
+			if(is.null(doPrintout)){
+				paste(
 					indent(2, by=indent.by), "// printout the results\n",
-					indent(2, by=indent.by), "echo(\"rk.header(\\\"", results.header,"\\\", level=1)\\n\");\n",
-					ifelse(is.null(printout), paste(indent(2, by=indent.by), "echo(\"rk.print(\\\"\\\")\\n\");", sep=""), printout),
-					sep="")
-				} else {paste(
-					indent(2, by=indent.by), "// all the real work is moved to a custom defined function doPrintout() below\n",
-					indent(2, by=indent.by), "// true in this case means: We want all the headers that should be printed in the output:\n",
-					indent(2, by=indent.by), "doPrintout(true);",
-					sep="")
+					indent(2, by=indent.by), echo(id("rk.header(\"", results.header, "\", level=1)")),
+					"\n",
+					ifelse(is.null(printout), echo("rk.print(\"\")"), paste("\n", printout, sep="")),
+					"\n",
+				sep="")
+				} else {
+					rk.paste.JS(
+						"// all the real work is moved to a custom defined function doPrintout() below",
+						"// true in this case means: We want all the headers that should be printed in the output:",
+						"doPrintout(true);",
+					level=2, indent.by=indent.by)
 				}, "\n}", sep="")
 
 	# this part will create preview() and doPrintout(full), if needed
@@ -62,14 +73,25 @@ rk.JS.doc <- function(require=c(), variables=NULL, results.header=NULL,
 		js.doPrintout <- ""
 	} else {
 		js.doPrintout <- paste("function preview(){\n",
-					indent(2, by=indent.by), "preprocess();\n",
-					indent(2, by=indent.by), "calculate();\n",
-					indent(2, by=indent.by), "doPrintout(false);\n}\n\n",
-					"function doPrintout(full){\n", doPrintout, "\n}",
+					rk.paste.JS(
+						"preprocess();",
+						"calculate();",
+						"doPrintout(false);\n}",
+					level=2, indent.by=indent.by),
+					"\n\n",
+					"function doPrintout(full){\n",
+					ifelse(is.null(variables), "", paste(
+						indent(2, by=indent.by), "// read in variables from dialog\n", 
+						paste(variables, collapse=""), "\n\n", sep="")),
+					indent(2, by=indent.by), "// create the plot\n",
+					rk.paste.JS(ite("full", echo(id("rk.header(\"", results.header,"\", level=1)")))),
+					"\n\n",
+					doPrintout,
+					"\n}",
 				sep="")
 	}
 
-	JS.doc <- paste(js.preprocess, js.calculate, js.printout, js.doPrintout, sep="\n\n")
+	JS.doc <- paste(js.gen.info, js.preprocess, js.calculate, js.printout, js.doPrintout, sep="\n\n")
 
 	return(JS.doc)
 }
