@@ -21,11 +21,14 @@
 #'		\code{\link[rkwarddev:rk.XML.context]{rk.XML.context}} for details.
 #' @param clean.name Logical, if \code{TRUE}, all non-alphanumeric characters except the underscore (\code{"_"}) will be removed from \code{name}.
 #' @param hints Logical, if \code{TRUE} and you leave out optional entries (like \code{about=NULL}), dummy sections will be added as comments.
+#' @param gen.info Logical, if \code{TRUE} a comment note will be written into the document,
+#'		that it was generated by \code{rkwarddev} and changes should be done to the script.
 #' @seealso \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
+#' @return An object of class \code{XiMpLe.node}.
 #' @export
 
 rk.XML.pluginmap <- function(name, about=NULL, components, hierarchy="test",
-	require=NULL, x11.context=NULL, import.context=NULL, clean.name=TRUE, hints=FALSE){
+	require=NULL, x11.context=NULL, import.context=NULL, clean.name=TRUE, hints=FALSE, gen.info=TRUE){
 	name.orig <- name
 	if(isTRUE(clean.name)){
 		# to besure, remove all non-character symbols from name
@@ -48,6 +51,12 @@ rk.XML.pluginmap <- function(name, about=NULL, components, hierarchy="test",
 	#   - menu
 	#     - entry
 
+	all.children <- list()
+
+	if(isTRUE(gen.info)){
+		all.children[[length(all.children)+1]] <- generator.info
+	} else {}
+
 	## about section
 	if(!is.null(about)){
 		if(inherits(about, "XiMpLe.node")){
@@ -57,7 +66,7 @@ rk.XML.pluginmap <- function(name, about=NULL, components, hierarchy="test",
 				stop(simpleError("I don't know what this is, but 'about' is not an about section!"))
 			} else {
 				# initialize all.children list
-				all.children <- list(about)
+				all.children[[length(all.children)+1]] <- about
 			}
 		} else {
 			stop(simpleError("'about' must be a XiMpLe.node, see ?rk.XML.about()!"))
@@ -68,11 +77,8 @@ rk.XML.pluginmap <- function(name, about=NULL, components, hierarchy="test",
 				name="!--",
 				children=list(new("XiMpLe.node", name="about", value="")))
 			# initialize all.children list
-			all.children <- list(about.XML)
-		} else {
-			# initialize all.children list
-			all.children <- list()
-		}
+			all.children[[length(all.children)+1]] <- about.XML
+		} else {}
 	}
 
 	## require section
@@ -177,8 +183,13 @@ rk.XML.pluginmap <- function(name, about=NULL, components, hierarchy="test",
 
 			# hierachy can either be a list with menu paths, or predefined
 			if(is.list(this.hier)){
-				new.hierarchy <- this.hier[2:length(this.hier)]
-				new.hierarchy[[length(new.hierarchy) + 1]] <- this.comp
+				# check if we need to generate a hierarchy tree
+				if(length(this.hier) > 1){
+					new.hierarchy <- this.hier[2:length(this.hier)]
+					new.hierarchy[[length(new.hierarchy) + 1]] <- this.comp
+				} else {
+					new.hierarchy <- rk.XML.entry(this.comp)
+				}
 				if(this.hier[[1]] %in% names(main.menu)){
 					id.names <- sapply(this.hier, function(hier.id){
 							return(clean.name(hier.id))
