@@ -59,6 +59,8 @@
 #'		to its menu structure by calling \code{rk.load.pluginmaps}. You can then try the plugin immediately.
 #' @param show Logical, if \code{TRUE} and \code{"pmap"} in \code{create}, RKWard will automatically call the created plugin after
 #'		it was loaded (i.e., this implies and also sets \code{load=TRUE}). This will only work on the main component, though.
+#' @param gen.info Logical, if \code{TRUE} comment notes will be written into the genrated documents,
+#'		that they were generated by \code{rkwarddev} and changes should be done to the script.
 #' @param indent.by A character string defining the indentation string to use.
 #' @return Character string with the path to the plugin root directory.
 #' @seealso \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
@@ -128,7 +130,7 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
 	xml=list(), js=list(), pluginmap=list(), rkh=list(),
 	overwrite=FALSE, tests=TRUE, lazyLoad=TRUE,
 	create=c("pmap", "xml", "js", "rkh", "desc"), suggest.required=TRUE,
-	components=list(), edit=FALSE, load=FALSE, show=FALSE, indent.by="\t"){
+	components=list(), edit=FALSE, load=FALSE, show=FALSE, gen.info=TRUE, indent.by="\t"){
 
 	if(inherits(about, "XiMpLe.node")){
 		about.node.name <- about@name
@@ -202,6 +204,7 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
 		hierarchy=pluginmap[["hierarchy"]],
 		pluginmap=paste("../", name, ".pluginmap", sep=""),
 		create=create[create %in% c("xml", "js", "rkh")],
+		gen.info=gen.info,
 		indent.by=indent.by)
 	components[[length(components)+1]] <- main.component
 
@@ -268,21 +271,25 @@ rk.plugin.skeleton <- function(about, path=tempdir(),
 			} else {}
 			# get components and hierarchy info from the components list
 			all.components <- sapply(components, function(this.comp){
-					named.compo <- paste("plugins/", clean.name(this.comp@name), ".xml", sep="")
+					comp.name <- this.comp@name
+					named.compo <- paste("plugins/", clean.name(comp.name), ".xml", sep="")
 					# we'll name the component, to nicen the menu entry
-					names(named.compo) <- this.comp@name
+					names(named.compo) <- comp.name
 					return(named.compo)
 				})
 			all.hierarchies <- lapply(components, function(this.comp){
-					this.comp@hierarchy
+					comp.hier <- this.comp@hierarchy
+					return(comp.hier)
 				})
+
 			XML.pluginmap <- rk.XML.pluginmap(
 				name=pluginmap[["name"]],
 				about=about,
 				components=all.components,
 				hierarchy=all.hierarchies,
 				require=pluginmap[["require"]],
-				hints=TRUE)
+				hints=TRUE,
+				gen.info=gen.info)
 			cat(pasteXMLTree(XML.pluginmap, shine=2, indent.by=indent.by), file=plugin.pluginmap)
 			# needed for "show"
 			pm.id.name <- pluginmap[["name"]]
