@@ -4,7 +4,8 @@
 \usage{
   rk.JS.doc(require = c(), variables = NULL, results.header
   = NULL, preprocess = NULL, calculate = NULL, printout =
-  NULL, doPrintout = NULL, indent.by = "\t")
+  NULL, doPrintout = NULL, gen.info = TRUE, indent.by =
+  "\t")
 }
 \arguments{
   \item{require}{A character vector with names of R
@@ -37,6 +38,11 @@
   function, as this will be added automatically. Use
   \code{ite("full", ...)} style JavaScript code to include
   headers etc.}
+
+  \item{gen.info}{Logical, if \code{TRUE} a comment note
+  will be written into the document, that it was generated
+  by \code{rkwarddev} and changes should be done to the
+  script.}
 
   \item{indent.by}{A character string defining how
   indentation should be done.}
