@@ -8,8 +8,8 @@
   list(), rkh = list(), overwrite = FALSE, tests = TRUE,
   lazyLoad = TRUE, create = c("pmap", "xml", "js", "rkh",
   "desc"), suggest.required = TRUE, components = list(),
-  edit = FALSE, load = FALSE, show = FALSE, indent.by =
-  "\t")
+  edit = FALSE, load = FALSE, show = FALSE, gen.info =
+  TRUE, indent.by = "\t")
 }
 \arguments{
   \item{about}{Either an object of class \code{XiMpLe.node}
@@ -135,6 +135,11 @@
   plugin after it was loaded (i.e., this implies and also
   sets \code{load=TRUE}). This will only work on the main
   component, though.}
+
+  \item{gen.info}{Logical, if \code{TRUE} comment notes
+  will be written into the genrated documents, that they
+  were generated by \code{rkwarddev} and changes should be
+  done to the script.}
 
   \item{indent.by}{A character string defining the
   indentation string to use.}
